# whos-that-pokemon

./: .coveragerc  .gitignore  .pylintrc  README.en.md  README.md  pyproject.toml  start.py  tasks.py
dokumentaatio/: arkkitehtuuri.md  instructions.md  ohjeet.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/.ipynb_checkpoints/: test-checkpoint.ipynb
dokumentaatio/kuvat/pokemon/: dirlist.csv
harjoitustyo/dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: data_handling.py  dirlist.csv  front.py  gamestage.py  hiscores.py  index.py  play.py  start.py  tasks.py  ui.py
src/data/: data_handling.py  directory_list.csv  hiscores.csv  pokedex.csv  pokedex_list.csv
src/gameplay/: create_widget.py  gamemode.py  hiscore_save.py  player.py  player_score.py  pokedex.py  pokemon.py
src/interface/: create_widget.py  game_over.py  gamertag_input.py  hiscores.py  index.py  play.py  ui.py
src/services/: gamemode_service.py  hiscore_init.py  hiscore_save.py  hiscore_service.py  hiscores.csv  player_service.py  pokemon_service.py
src/test/: data_handling_test.py  gamemode_test.py  hiscore_save_test.py  hiscore_service_test.py  player_score_test.py  player_service_test.py  player_test.py  pokedex_service_test.py  pokedex_test.py  pokemon_service_test.py  pokemon_test.py
src/tests/: Test_data_handling.py  data_handling_test.py
