[tool.poetry]
name = "whos-that-pokemon"
version = "0.1.0"
description = ""
authors = ["Antti Nevalainen <antti.s.nevalainen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.2.0"
pandas = "^1.2.4"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
